<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".fragments.MagnetometerFragment">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:backgroundTint="@color/white"
                    app:cardElevation="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    app:cardPreventCornerOverlap="false">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/magnetometer"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mag_info"
                            android:textColor="@color/primary"
                            android:textSize="13sp"
                            android:layout_marginTop="6dp" />


                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:backgroundTint="@color/white"
                    app:cardElevation="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    app:cardPreventCornerOverlap="false">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/mag_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Status"
                            android:textColor="@color/primary"
                            android:textSize="12sp"
                            android:layout_marginTop="4dp" />


                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:backgroundTint="@color/white"
                    app:cardElevation="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    app:cardPreventCornerOverlap="false">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/mag_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Status"
                            android:textColor="@color/primary"
                            android:textSize="12sp"
                            android:layout_marginTop="4dp" />


                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:backgroundTint="@color/white"
                    app:cardElevation="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    app:cardPreventCornerOverlap="false">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vendor"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/mag_vendor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Status"
                            android:textColor="@color/primary"
                            android:textSize="12sp"
                            android:layout_marginTop="4dp" />


                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:backgroundTint="@color/white"
                    app:cardElevation="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    app:cardPreventCornerOverlap="false">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/version"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/mag_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Status"
                            android:textColor="@color/primary"
                            android:textSize="12sp"
                            android:layout_marginTop="4dp" />


                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:backgroundTint="@color/white"
                    app:cardElevation="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    app:cardPreventCornerOverlap="false">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/power"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/mag_power"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Status"
                            android:textColor="@color/primary"
                            android:textSize="12sp"
                            android:layout_marginTop="4dp" />


                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:backgroundTint="@color/white"
                    app:cardElevation="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    app:cardPreventCornerOverlap="false">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/resolution"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/mag_resolution"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Status"
                            android:textColor="@color/primary"
                            android:textSize="12sp"
                            android:layout_marginTop="4dp" />


                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:backgroundTint="@color/white"
                    app:cardElevation="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    app:cardPreventCornerOverlap="false">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/max_range"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/mag_range"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Status"
                            android:textColor="@color/primary"
                            android:textSize="12sp"
                            android:layout_marginTop="4dp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="10dp"
                    android:backgroundTint="@color/white"
                    app:cardElevation="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    app:cardPreventCornerOverlap="false">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/mag_chart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.cardview.widget.CardView>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>